210121 Color design update

--- a/find.html
+++ b/find.html
@@ -29,10 +29,11 @@
         <span
           ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
         ></span>
+        <span class="screen-header__alarm badge-alarm"></span>
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen find-screen">
       <div class="icon-row">
         <div class="icon-row__icon">
           <i class="fas fa-qrcode"></i>
@@ -64,8 +65,8 @@
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">#NomadCoders</h5>
+            <h6 class="open-post__hashtags">#nomad#coders#challenges</h6>
             <div class="open-post__members">
               <img src="https://avatars2.githubusercontent.com/u/73817140" />
               <span class="open-post__members-count">802 members</span>
@@ -75,7 +76,7 @@
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="https://avatars2.githubusercontent.com/u/73817140" />
+              <img src="https://avatars3.githubusercontent.com/u/3612017" />
               <div class="open-post__heart-count">
                 <i class="fas fa-heart fa-xs"></i><span>326</span>
               </div>
@@ -105,7 +106,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <span class="nav__newer"></span>
+            <span class="nav__alarm badge-alarm"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
