--- a/chats.html
+++ b/chats.html
@@ -31,6 +31,7 @@
         <span
           ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
         ></span>
+        <span class="screen-header__alarm badge-alarm"></span>
       </div>
     </header>
 
@@ -77,7 +78,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <span class="nav__newer"></span>
+            <span class="nav__alarm badge-alarm"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
