--- a/friends.html
+++ b/friends.html
@@ -30,6 +30,7 @@
         <span
           ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
         ></span>
+        <span class="screen-header__alarm badge-alarm"></span>
       </div>
     </header>
 
@@ -76,6 +77,25 @@
             </div>
           </div>
         </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://avatars2.githubusercontent.com/u/73817140"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
@@ -99,14 +119,14 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <span class="nav__newer"></span>
+            <span class="nav__alarm badge-alarm"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
       </ul>
     </nav>
     <div id="splash-screen">
-      <i class="fas fa-comment"></i>
+      <i class="far fa-comment-dots"></i>
     </div>
     <div id="no-mobile">
       <span>Your screen is too big</span>
