--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
         class="login-form__text"
         type="text"
         placeholder="Email or phone number"
+        required="true"
       />
       <input
         name="password"
         class="login-form__text"
         type="password"
         placeholder="Password"
+        required="true"
       />
       <input class="login-form__submit" type="submit" value="Log In" />
       <a class="login-form__a" href="#">Find Kokoa Account or Password</a>
