--- a/more.html
+++ b/more.html
@@ -40,7 +40,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars2.githubusercontent.com/u/73817140"
+            src="https://assets.jazziz.com/2018/11/JacoPAstorius-e1506014106975-1024x580.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
