--- a/friends.html
+++ b/friends.html
@@ -43,7 +43,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars2.githubusercontent.com/u/73817140"
+            src="https://assets.jazziz.com/2018/11/JacoPAstorius-e1506014106975-1024x580.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
@@ -61,18 +61,21 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://avatars2.githubusercontent.com/u/73817140"
+              src="https://images.squarespace-cdn.com/content/v1/550c8816e4b07f1da6705ffa/1567051032828-1W8R05K8OMRW6SLHAVPC/ke17ZwdGBToddI8pDm48kJBDBC9WtvqSR_76QA4M6FpZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpy6JDRvQvEBNr6nUNj84vj_mlBKrdebPn9GGvgt9jAfgOsNyToSAMM4W1wJZq6_dk8/p.15+flea+red+hot+chili+peppers.jpeg?format=500w"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
-                Channel
+                Flea
               </h4>
+              <h6 class="user-component__subtitle">
+                Red Hot Chili Peppers bassist.
+              </h6>
             </div>
           </div>
           <div class="user-component__column">
             <div>
-              <span>2</span>
+              <span>5</span>
               <i class="fas fa-chevron-right fa-xs"></i>
             </div>
           </div>
@@ -80,13 +83,16 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://avatars2.githubusercontent.com/u/73817140"
+              src="https://upload.wikimedia.org/wikipedia/commons/1/14/Marcus_Miller_Ancienne_2007.jpg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
-                Channel
+                Marcus Miller
               </h4>
+              <h6 class="user-component__subtitle">
+                Jazz composer, best known as a bassist.
+              </h6>
             </div>
           </div>
           <div class="user-component__column">
