--- a/chats.html
+++ b/chats.html
@@ -56,6 +56,24 @@
           </div>
         </div>
       </a>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://www.beaches.com/blog/content/images/2019/11/Beach-Wedding-Detail-Aisle-Flowers-1.jpg"
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Jeonypang</h4>
+              <h6 class="user-component__subtitle">Hello my fiance</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">10:16</span>
+            <div class="badge">9</div>
+          </div>
+        </div>
+      </a>
     </main>
 
     <nav class="nav">
